# run_system_checks

./: README.md  pyproject.toml
src/: 02_gpu_info.sh  03_torch_info.py  04_disk_info.sh  05_filesystem_speed.sh  08_amp_test.py  cpu_info.sh  cuda_info.py  disk_speed.sh  filesystem_speed.sh  run_system_checks.sh  system_info.py  torch_info.py
